Changes since milestone-03:

* Switch to new apr_poll() API.  [Justin Erenkrantz]

* Stop using the apr_lock.h API and start using apr_thread_mutex.h
  instead.  [Aaron Bannert]

* Remove the USE_RW_LOCK_FOR_SSL conditional compiles since we
  didn't have an autoconf feature test for it nor was it really
  giving us any benefit.  [Aaron Bannert]

* Add ability to detect when the server has closed the connection instead
  of erroring out (think Keep-Alive).  [Justin Erenkrantz]

* Add chunked support.  [Justin Erenkrantz]

* Add detection of CAPATH variable for RedHat installs.
  [Justin Erenkrantz]

* Fix return value in parse_xml_url_info.  [Justin Erenkrantz]

* Fix linking problems due to misordering of libraries on Solaris.
  [Justin Erenkrantz]

* Add config.nice support from apr_common.m4.  [Justin Erenkrantz]

* Add apr_common.m4 and fix up building/configuration of source
  apr/apr-util.  [Justin Erenkrantz]

* Introduce sequence tag to urllist element.  This tag has the following
  form:

  <urllist> 
    <sequence sequencename="myseq" sequencelist="bob, jane, joe">
        <url requesttemplate="http://www.you.com/~${myseq}/" />
        <url requesttemplate="http://www.you.com/~${myseq}/index.html" />
    </sequence>
  </urllist>

    This will hit:
        http://www.you.com/~bob/
        http://www.you.com/~bob/index.html
        http://www.you.com/~jane/
        http://www.you.com/~jane/index.html
        http://www.you.com/~joe/
        http://www.you.com/~joe/index.html

  This allows certain URL patterns to be simplified.  [Justin Erenkrantz]

* Remove shadow declaration of stat in flood_round_robin.c.
  [Justin Erenkrantz]

* Factor out handling of URI XML fields. [Justin Erenkrantz]

* Properly detect and use APR's libtool.  [Justin Erenkrantz]

* Reworked build system to ease integration with APR/apr-util.
  [Justin Erenkrantz]

Changes since milestone-02:

* Updated apr_lock_create to reflect the API change in APR.
  [Aaron Bannert]
