@@ -1,5 +1,10 @@
 Changes since milestone-03:
 
+* Revamp keepalive_recv_resp to use the APR table API.  This allows true
+  case insensitivity with the response headers.  [Justin Erenkrantz]
+
+* Support autoconf-2.5+.  [Justin Erenkrantz]
+
 * Switch to new apr_poll() API.  [Justin Erenkrantz]
 
 * Stop using the apr_lock.h API and start using apr_thread_mutex.h
